--- a/index.html
+++ b/index.html
@@ -99,16 +99,17 @@
                     <div class="card h-100 c_card" style="width: 18rem;">
                         <img src="./media/nature1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-title fs-5"><b>Game Of Life</b> &nbsp;
-                                <a href="https://github.com/PraveenKum11/game-of-life" target="_blank">
+                            <p class="card-title fs-5"><b>Creo</b> &nbsp;
+                                <a href="https://github.com/PraveenKum11/creo" target="_blank">
                                     <i class="fa-brands fa-github" style="color: white; font-size: large;"></i>
                                 </a>
                             </p>
-                            <p class="card-text">Simple implementation of Conway's Game of Life in SFML.</p>
+                            <p class="card-text">Creo is a cutting-edge article publishing platform that empowers writers and bloggers to share their ideas and stories with a global audience.</p>
                         </div>
                         <div class="card-footer c_card_footer">
-                            <button class="btn btn-success c_tag">C++</button>
-                            <button class="btn btn-success c_tag">SFML</button>
+                            <button class="btn btn-success c_tag">Django</button>
+                            <button class="btn btn-success c_tag">Bootstrap</button>
+                            <button class="btn btn-success c_tag">HTMX</button>
                         </div>
                     </div>
                 </div>
